[package]
name = "backup_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
lazy_static = "1.4.0"
regex = "1.5.4"

[dependencies.async-std]
version = "1.10.0"
features = ["unstable"]
